force-app/main/default/objects/Campaign/fields/Clicks_Unique__c.field-meta.xml
<CustomField>
    <fullName>Clicks_Unique__c</fullName>
    <label>Clicks Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>