force-app/main/default/objects/Campaign/fields/Groupid__c.field-meta.xml
<CustomField>
    <fullName>Groupid__c</fullName>
    <label>Groupid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>