force-app/main/default/objects/Campaign/fields/GroupIdFormula__c.field-meta.xml
<CustomField>
    <fullName>GroupIdFormula__c</fullName>
    <formula>Text(Groupid__c)</formula>
    <label>GroupId</label>
    <type>Text</type>
</CustomField>