force-app/main/default/objects/Campaign/fields/Nonsent__c.field-meta.xml
<CustomField>
    <fullName>Nonsent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nonsent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>