force-app/main/default/objects/Campaign/fields/Opens_Unique__c.field-meta.xml
<CustomField>
    <fullName>Opens_Unique__c</fullName>
    <label>Opens Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>