force-app/main/default/objects/Campaign/fields/Sendid__c.field-meta.xml
<CustomField>
    <fullName>Sendid__c</fullName>
    <label>Sendid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>