force-app/main/default/objects/Campaign/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>