force-app/main/default/objects/Campaign/fields/Total_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Member_Count__c</fullName>
    <label>Total Member Count</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>