force-app/main/default/objects/Campaign/fields/Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unsubscribe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>